Fix openGL texture buffers on non RGB8 color spaces

We should prepare a proper pixel size when creating a buffer

BUG:328998