krita/ui/opengl/kis_opengl_image_textures.h
@@ -145,6 +145,7 @@ private:
     static void getTextureSize(KisGLTexturesInfo *texturesInfo);
 
     void updateTextureFormat();
+    const KoColorSpace* tilesColorSpace() const;
 
 private:
     KisImageWSP m_image;
